--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "name": "jparasha.github.io",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://jparasha.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "gh-pages": "^3.2.3",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-gauge-chart": "^0.4.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
